[Fix&Refactor] Gemini prompt 고도화 & 맛집 이름 데이터 정확성 개선 (#69)
* fix: prompt & placeName & schedule cron

* fix: schedule cron, prompt

* fix: add region, RepresentativeReview